--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -13,11 +13,4 @@ body {
     font-size: 1.5rem;
 }
 
-body.disable-scrolling {
-    height: 100vh;
-    width: 100vw; 
-    position: fixed;
-    overflow: hidden;
-}
-
 @import '../utilities/classes'; 
