--- a/sass/componenets/_overlay.scss
+++ b/sass/componenets/_overlay.scss
@@ -5,7 +5,7 @@
     bottom: 0; 
     left: 0; 
     right: 0; 
-    z-index: 9999; 
+    z-index: 10000; 
     background: rgba(0, 0, 0, .6);
     @media (max-width: 768px) {
         &.show {
